# stylus

./: .gitignore  LICENSE  README.md  README_cn.md  pyproject.toml
src/stylus/: analyzer.py  cli.py  gitutil.py  hooks.py  ignore.py  paths.py  skill.py  state.py
tests/: test_analyzer.py  test_cli_smoke.py  test_gitutil.py  test_hooks.py  test_ignore.py  test_skill.py  test_state.py
